tests/integration/snapshots/integration__simple_additions__ai_adds_lines_and_human_deletes_most_of_them-2.snap
---
source: tests/simple_additions.rs
expression: blame
---
{
    1: "Test User",
    2: "cursor",
    3: "cursor",
    4: "cursor",
}
