tests/integration/snapshots/integration__simple_additions__ai_adds_lines_with_unstaged_modifications-2.snap
---
source: tests/simple_additions.rs
expression: blame
---
{
    1: "Test User",
    2: "cursor",
    3: "cursor",
    4: "cursor",
    5: "cursor",
    6: "cursor",
}
