tests/integration/snapshots/integration__simple_additions__ai_adds_lines_with_unstaged_modifications.snap
---
source: tests/simple_additions.rs
expression: authorship_log
---
AuthorshipLogV3 {
    attestations: [
        FileAttestation {
            file_path: "test.ts",
            entries: [
                AttestationEntry {
                    hash: "1cee1d9",
                    line_ranges: [
                        Range(
                            2,
                            6,
                        ),
                    ],
                },
            ],
        },
    ],
    metadata: AuthorshipMetadata {
        schema_version: "authorship/3.0.0",
        base_commit_sha: "b82b8fa3b85de492123de23d6aa6268f47522bd8",
        prompts: {
            "1cee1d9": PromptRecord {
                agent_id: AgentId {
                    tool: "cursor",
                    id: "test_session_fixed",
                    model: "claude-3-sonnet",
                },
                human_author: Some(
                    "Test User",
                ),
                messages: [],
                total_additions: 7,
                total_deletions: 0,
                accepted_lines: 7,
                overriden_lines: 0,
            },
        },
    },
}
