tests/integration/snapshots/integration__simple_additions__ai_adds_middle_then_human_deletes_and_replaces.snap
---
source: tests/simple_additions.rs
expression: blame
---
{
    1: "Test User",
    2: "Test User",
    3: "Test User",
    4: "Test User",
    5: "Test User",
}
