tests/integration/snapshots/integration__simple_additions__ai_adds_then_human_deletes_all_ai_lines.snap
---
source: tests/simple_additions.rs
expression: blame
---
{
    1: "Test User",
    2: "Test User",
    3: "Test User",
}
