tests/integration/snapshots/integration__simple_additions__ai_adds_then_human_deletes_all_with_empty_replacement.snap
---
source: tests/simple_additions.rs
expression: authorship_log
---
AuthorshipLogV3 {
    attestations: [],
    metadata: AuthorshipMetadata {
        schema_version: "authorship/3.0.0",
        base_commit_sha: "initial",
        prompts: {},
    },
}
