tests/integration/snapshots/integration__simple_additions__ai_human_interleaved_line_attribution.snap
---
source: tests/simple_additions.rs
expression: blame
---
{
    1: "Test User",
    2: "Test User",
    3: "Test User",
    4: "Test User",
    5: "Test User",
    6: "Test User",
    7: "Test User",
    8: "Test User",
    9: "Test User",
    10: "Test User",
    11: "Test User",
    12: "Test User",
    13: "Test User",
    14: "Test User",
    15: "Test User",
    16: "Test User",
    17: "Test User",
    18: "Test User",
    19: "Test User",
    20: "Test User",
    21: "Test User",
    22: "Test User",
    23: "Test User",
    24: "Test User",
    25: "Test User",
    26: "Test User",
    27: "Test User",
    28: "Test User",
    29: "Test User",
    30: "Test User",
    31: "Test User",
    32: "Test User",
    33: "Test User",
    34: "cursor",
    35: "Test User",
    36: "cursor",
}
