tests/integration/snapshots/integration__simple_additions__complex_mixed_additions_and_deletions.snap
---
source: tests/simple_additions.rs
expression: authorship_log
---
AuthorshipLogV3 {
    attestations: [
        FileAttestation {
            file_path: "test.txt",
            entries: [
                AttestationEntry {
                    hash: "1cee1d9",
                    line_ranges: [
                        Range(
                            2,
                            4,
                        ),
                        Range(
                            12,
                            13,
                        ),
                    ],
                },
            ],
        },
    ],
    metadata: AuthorshipMetadata {
        schema_version: "authorship/3.0.0",
        base_commit_sha: "1387fa7644fb10e1edbe7dc1fd07a931b798cf0b",
        prompts: {
            "1cee1d9": PromptRecord {
                agent_id: AgentId {
                    tool: "cursor",
                    id: "test_session_fixed",
                    model: "claude-3-sonnet",
                },
                human_author: Some(
                    "Test User",
                ),
                messages: [],
                total_additions: 5,
                total_deletions: 2,
                accepted_lines: 5,
                overriden_lines: 0,
            },
        },
    },
}
